--- a/EFI/OC/Kexts/HibernationFixup.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/HibernationFixup.kext/Contents/Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>22E252</string>
+	<string>22D68</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
-	<string>SMCSuperIO</string>
+	<string>HibernationFixup</string>
 	<key>CFBundleIdentifier</key>
-	<string>ru.joedm.SMCSuperIO</string>
+	<string>as.lvs1974.HibernationFixup</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>SMCSuperIO</string>
+	<string>HibernationFixup</string>
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.3.2</string>
+	<string>1.4.9</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -25,69 +25,65 @@
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.3.2</string>
+	<string>1.4.9</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string></string>
+	<string>14C18</string>
 	<key>DTPlatformName</key>
 	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>13.3</string>
+	<string>13.1</string>
 	<key>DTSDKBuild</key>
-	<string>22E245</string>
+	<string>22C55</string>
 	<key>DTSDKName</key>
-	<string>macosx13.3</string>
+	<string>macosx13.1</string>
 	<key>DTXcode</key>
-	<string>1430</string>
+	<string>1420</string>
 	<key>DTXcodeBuild</key>
-	<string>14E222b</string>
+	<string>14C18</string>
+	<key>GitCommitHash</key>
+	<string>84833cf</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>ru.joedm.SMCSuperIO</key>
+		<key>as.lvs1974.HibernationFixup</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>ru.joedm.SMCSuperIO</string>
+			<string>as.lvs1974.HibernationFixup</string>
 			<key>GitCommitHash</key>
-			<string>28c7d1d</string>
+			<string>84833cf</string>
 			<key>IOClass</key>
-			<string>SMCSuperIO</string>
+			<string>HibernationFixup</string>
 			<key>IOMatchCategory</key>
-			<string>SMCSuperIO</string>
-			<key>IOPCIClassMatch</key>
-			<string>0x06010000&amp;0xffff0000</string>
+			<string>HibernationFixup</string>
 			<key>IOProviderClass</key>
-			<string>IOPCIDevice</string>
+			<string>IOResources</string>
 			<key>IOResourceMatch</key>
-			<string>ACPI</string>
+			<string>IOKit</string>
 		</dict>
 	</dict>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.6</string>
+	<string>10.8</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2018 joedm. All rights reserved.</string>
+	<string>Copyright © 2017 lvs1974. All rights reserved.</string>
 	<key>OSBundleCompatibleVersion</key>
 	<string>1.0</string>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>as.vit9696.Lilu</key>
-		<string>1.2.0</string>
-		<key>as.vit9696.VirtualSMC</key>
-		<string>1.0.0</string>
-		<key>com.apple.iokit.IOACPIFamily</key>
-		<string>1.0.0d1</string>
+		<string>1.2.4</string>
 		<key>com.apple.kpi.bsd</key>
-		<string>10.0.0</string>
+		<string>12.0.0</string>
 		<key>com.apple.kpi.dsep</key>
-		<string>10.0.0</string>
+		<string>12.0.0</string>
 		<key>com.apple.kpi.iokit</key>
-		<string>10.0.0</string>
+		<string>12.0.0</string>
 		<key>com.apple.kpi.libkern</key>
-		<string>10.0.0</string>
+		<string>12.0.0</string>
 		<key>com.apple.kpi.mach</key>
-		<string>10.0.0</string>
+		<string>12.0.0</string>
 		<key>com.apple.kpi.unsupported</key>
-		<string>10.0.0</string>
+		<string>12.0.0</string>
 	</dict>
 	<key>OSBundleRequired</key>
 	<string>Root</string>
